yaml/gke/jongd/palette3-chat.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-palette3-chat
  labels:
    app: palette3-chat
spec:
  type: NodePort
  selector:
    app: palette3-chat
  ports:
    - name: palette3-chat
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: palette3-chat
  labels:
    app: palette3-chat
spec:
  replicas: 1
  serviceName: palette3-chat
  #podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: palette3-chat
  template:
    metadata:
      labels:
        app: palette3-chat
    spec:
      imagePullSecrets:
       - name: regcred 
      containers:
        - name: palette3-chat
          image: ghcr.io/kjd4717/palette3-api:2023.0628.106
      restartPolicy: Always
