yaml/gke/jongd/svc-palette3-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-palette3-ui
  labels:
    app: palette3-ui
spec:
  type: NodePort
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  selector:
    app: palette3-ui
