yaml/gke/jongd/ingress-palette3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-palette3
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "palette3-ingress-ip"    
    kubernetes.io/ingress.class: "gce"  
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-ui
                port:
                  number: 3003
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-api
                port:
                  number: 8080
          - path: /auth-api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-auth
                port:
                  number: 8080
          - path: /chat-api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-chat
                port:
                  number: 8080
          - path: /phone-api
            pathType: Prefix
            backend:
              service:
                name: svc-palette3-phone
                port:
                  number: 8080
